--- a/views/login.ejs
+++ b/views/login.ejs
@@ -284,7 +284,7 @@
                 $("#noloading").show();
               }
               if (result.isConfirmed) {
-                location.href = `/register`;
+                return (location.href = `/register`);
               }
             });
           }
@@ -334,6 +334,19 @@
             return Toast2.fire({
               icon: "error",
               title: `You have been Suspended ! Please reach out to us via our Contact Form for further details.`,
+            }).then(() => {
+              $("#loginBtn").prop("disabled", false);
+              $("#loading").hide();
+              $("#noloading").show();
+            });
+          }
+          if (data.title == "password err") {
+            $("#loginBtn").prop("disabled", true);
+            $("#loading").show();
+            $("#noloading").hide();
+            return Toast2.fire({
+              icon: "error",
+              title: `Password processing error.`,
             }).then(() => {
               $("#loginBtn").prop("disabled", false);
               $("#loading").hide();
