--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -56,6 +56,7 @@ user.dataValues || {} %>
     </style>
   </head>
   <body>
+    <%- include('nav')%>
     <div class="form-container">
       <h2>Registration Form</h2>
       <form id="registrationForm">
