--- a/views/login.ejs
+++ b/views/login.ejs
@@ -177,6 +177,7 @@
       <p>Don't have an account? <a href="/register">Register here</a>.</p>
 
       <a href="/auth/facebook">Login with fb</a>
+      <a href="/auth/google">Login with google</a>
     </div>
   </body>
 
