--- a/views/login.ejs
+++ b/views/login.ejs
@@ -178,6 +178,8 @@
 
       <a href="/auth/facebook">Login with fb</a>
       <a href="/auth/google">Login with google</a>
+      <a href="/auth/github">Login with github</a>
+      <a href="/auth/twitter">Login with twitter</a>
     </div>
   </body>
 
