--- a/views/allbooks.ejs
+++ b/views/allbooks.ejs
@@ -219,9 +219,63 @@
         <!-- Buttons -->
       </div>
       <% }) }%>
+      <button onclick="makereq(event)">Khalti</button>
     </div>
   </body>
   <script>
+    async function makereq(e, payment_method) {
+      e.preventDefault();
+      const url = "https://a.khalti.com/api/v2/epayment/initiate/";
+      try {
+        const response = await fetch(url, {
+          method: "POST",
+          headers: {
+            Authorization:
+              "key test_secret_key_e6f7f59eb7304b968c3a69cba2c23057",
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({
+            return_url: "http://localhost:5000/dashboard",
+            website_url: "http://localhost:5000",
+            amount: 1300,
+            purchase_order_id: "test12",
+            purchase_order_name: "test",
+            customer_info: {
+              name: "Khalti Bahadur",
+              email: "example@gmail.com",
+              phone: "9800000123",
+            },
+            amount_breakdown: [
+              {
+                label: "Mark Price",
+                amount: 1000,
+              },
+              {
+                label: "VAT",
+                amount: 300,
+              },
+            ],
+            product_details: [
+              {
+                identity: "1234567890",
+                name: "Khalti logo",
+                total_price: 1300,
+                quantity: 1,
+                unit_price: 1300,
+              },
+            ],
+            merchant_username: "merchant_name",
+            merchant_extra: "merchant_extra",
+          }),
+        });
+        if (response.ok) {
+          const responseData = await response.json();
+          console.log(responseData);
+        }
+      } catch (error) {
+        console.log(error);
+      }
+    }
     document
       .getElementById("all-checkbox")
       .addEventListener("change", function () {
