--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -80,6 +80,7 @@
     <button onclick="navigateTo('allbooks')">All books</button>
     <button onclick="navigateTo('mybooks')">My books</button>
     <button onclick="navigateTo('transactions')">Transactions</button>
+    <button onclick="navigateTo('esewa/history')">Esewa payments</button>
     <button onclick="navigateTo('recommendations')">Recommendations</button>
     <button onclick="navigateTo('notification')" class="notifybtn">
       Notifications <% if (notifications.length > 0) { %>
