--- a/views/register.ejs
+++ b/views/register.ejs
@@ -338,4 +338,8 @@
       </div>
     </div>
   </body>
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    const socket = io();
+  </script>
 </html>
