--- a/views/about.ejs
+++ b/views/about.ejs
@@ -50,7 +50,7 @@
     </style>
   </head>
   <body>
-    <%- include('nav')%>
+    <%- include('nav')%> <% include ('tabclose') %>
     <div class="centered-div">
       <h1>User Information</h1>
       <div class="info-container">
