--- a/views/about.ejs
+++ b/views/about.ejs
@@ -50,7 +50,7 @@
     </style>
   </head>
   <body>
-    <%- include('nav')%> <% include ('tabclose') %>
+    <%- include('nav')%>
     <div class="centered-div">
       <h1>User Information</h1>
       <div class="info-container">
@@ -79,4 +79,17 @@
       </div>
     </div>
   </body>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
+    // Send a heartbeat signal to the server every 30 seconds
+    setInterval(function () {
+      fetch("/heartbeat", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({ timestamp: Date.now() }),
+      });
+    }, 10000); // 10 seconds
+  </script>
 </html>
