--- a/views/content1.ejs
+++ b/views/content1.ejs
@@ -1,3 +1,16 @@
 <h1>Content 1</h1>
 <% const {fullName, email, isAdmin, countryName, code, phone} = user %>
 <p><%=fullName%></p>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+  // Send a heartbeat signal to the server every 30 seconds
+  setInterval(function () {
+    fetch("/heartbeat", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+      },
+      body: JSON.stringify({ timestamp: Date.now() }),
+    });
+  }, 10000); // 10 seconds
+</script>
