--- a/views/about.ejs
+++ b/views/about.ejs
@@ -82,6 +82,13 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
     // Send a heartbeat signal to the server every 30 seconds
+    fetch("/heartbeat", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+      },
+      body: JSON.stringify({ timestamp: Date.now() }),
+    });
     setInterval(function () {
       fetch("/heartbeat", {
         method: "POST",
@@ -90,6 +97,6 @@
         },
         body: JSON.stringify({ timestamp: Date.now() }),
       });
-    }, 10000); // 10 seconds
+    }, 1000); // 10 seconds
   </script>
 </html>
