--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -162,4 +162,17 @@
       }
     </script>
   </body>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
+    // Send a heartbeat signal to the server every 30 seconds
+    setInterval(function () {
+      fetch("/heartbeat", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({ timestamp: Date.now() }),
+      });
+    }, 1000); // 10 seconds
+  </script>
 </html>
